# relay-chat

./: .env.example  .gitignore  README.md  cloudflare-env.d.ts  next.config.ts  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  desktop-release.yml
.openai/: hosting.json
app/: ChatApp.tsx  DownloadSection.tsx  globals.css  layout.tsx  page.tsx
app/api/calls/: route.ts
app/api/conversations/: route.ts
app/api/conversations/[id]/messages/: route.ts
app/api/media/[messageId]/: route.ts
app/api/profile/: route.ts
app/api/uploads/: route.ts
app/api/users/: route.ts
app/download/: page.tsx
db/: schema.ts
drizzle/: 0000_wakeful_virginia_dare.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
lib/: notifications.ts  server.ts  supabase.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/migrations/: 001_relay.sql  002_membership_policy_fix.sql
worker/: index.ts
