[package]
name = "relay"
version = "0.1.0"
description = "Private conversations, closer"
authors = ["smart-window"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
