[package]
name = "relay"
version = "0.1.5"
description = "Private conversations, closer"
authors = ["smart-window"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
